# Project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  note.txt  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.github/agents/: dtu_mlops_agent.md
.github/workflows/: docker-images.yaml  linting.yaml  pre-commit-update.yaml  tests.yaml
.hydra/: config.yaml  hydra.yaml  overrides.yaml
configs/: cluster.yaml  train_baseline.yaml
data/processed/: combined.csv
data/raw/: .gitignore  adhd200.dvc
dockerfiles/: api.dockerfile  frontend.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
frontend/: app.py
outputs/2026-01-22/12-31-32/.hydra/: hydra.yaml
outputs/2026-01-22/12-34-29/.hydra/: hydra.yaml
outputs/2026-01-22/12-35-14/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-22/12-37-57/.hydra/: hydra.yaml
outputs/2026-01-22/13-14-38/.hydra/: hydra.yaml
outputs/2026-01-22/14-21-27/.hydra/: hydra.yaml
outputs/2026-01-22/14-22-31/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-22/15-19-25/.hydra/: hydra.yaml
reports/: README.md  cluster_assignments.csv  drift_psi_table.csv  drift_report.json  metrics.json  profile.pstats
src/mlops_group35/: api.py  cluster_train.py  config.py  data.py  drift.py  drift_check.py  drift_runtime.py  lit_model.py  metrics.py  model.py  train.py
sweeps/: m14_sweep.yaml
tests/: __init__.py  test_data.py  test_model.py
tests/integration/: test_apis.py
tests/integrationtests/: test_apis.py
tests/performance/: locustfile.py
(+6 files in other folders)
